<resources>
    <string name="app_name">Delivery Restaurante</string>

    <string name="opcion_admin">Ver pedidos</string>
    <string name="opcion_cliente">Ver productos</string>
    <string name="opcion_registrar">Agregar productos</string>

    <string name="titulo_carrito">Carrito de compra</string>
    <string name="titulo_pedidos">Lista de pedidos</string>
    <string name="titulo_datos">Datos de cliente</string>
    <string name="titulo_registro">Registrar productos</string>
    <string name="titulo_detalle">Detalle del pedido</string>

    <string name="ejemplo_texto">Ejemplo texto</string>
    <string name="ejemplo_precio">S/. 9.99</string>

    <array name="categorias">
        <item>Platos a la carta</item>
        <item>Menu</item>
        <item>Bebidas</item>
    </array>

    <string name="label_nombre">Ingrese su nombre</string>
    <string name="label_telefono">Digite su numero de telefono</string>
    <string name="label_direccion">Escriba su dirección</string>
    <string name="label_dinero">Efectivo a pagar</string>
    <string name="label_pagar">Pagado con </string>
    <string name="label_vuelto">Vuelto </string>
    <string name="registro_nombre">Ingrese el nombre</string>
    <string name="registro_precio">Precio</string>

    <string name="boton_pedir">Hacer pedido</string>
    <string name="boton_registrar">Registrar</string>
    <string name="boton_comprar">Comprar</string>
    <string name="boton_foto">Agregar imagen</string>
    <string name="boton_foto_agregada">Imagen agregada</string>


    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
</resources>
